--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -3,20 +3,30 @@
 	"commands": {
 		"help": {
 			"title": "Меню команд",
-			"description": "Показать команды бота"
+			"description": "Отобразить список команд бота"
 		},
 		"language": {
 			"description": "Настроить язык для сервера",
-			"setLanguage": "Настроить язык для сервера",
+			"setLanguage": "Установить язык для сервера",
 			"choiceLanguage": "Выбрать язык",
 			"updateLanguage": "{{{flag}}} Язык установлен на {{language}}"
 		},
+		"settings": {
+			"description": "Посмотреть все настройки сервера",
+			"settingServerTitle": "Настройки сервера",
+			"serverSettingsFieldName": "Общие",
+			"language": "Язык {{language}}",
+			"welcomeChannel": "Канал приветствия: {{{channelId}}}",
+			"leaveChannel": "Канал прощания: {{{channelId}}}",
+			"joinToCreateChannel": "Канал \"Join To Create\": {{{channelId}}}",
+			"noChannel": "Не Установлено"
+		},
 		"serverInfo": {
-			"title": "О сервере",
-			"description": "Показать информацию о сервере",
-			"generalLabel": "Основное",
+			"title": "Информация о сервере",
+			"description": "Показать общую информацию о сервере",
+			"generalLabel": "Общее",
 			"guildName": "Название: {{guildName}}",
-			"noDescription": "Нет Описания",
+			"noDescription": "Описание отсутствует",
 			"ownerId": "Создатель: <@{{ownerId}}>",
 			"createdAt": "Cоздан: {{{guildCreatedAt}}}",
 			"guildDescription": "Описание: {{guildDescription}}",
@@ -39,70 +49,64 @@
 			"description": "Показать информацию о пользователе",
 			"userOption": "Пользователь",
 			"title": "О Пользователе",
-			"createdAt": "Создан",
+			"createdAt": "Аккаунт создан",
 			"createdTime": "{{{userCreatedAt}}}",
 			"statusLabel": "Статус",
 			"userStatus": "{{statusList}}",
-			"joinedAt": "Вошёл",
+			"joinedAt": "Вошёл на сервер",
 			"joinedTime": "{{{memberJoinedTime}}}",
 			"memberRoles": "Роли",
-			"emptyRolesList": "нет ролей",
+			"emptyRolesList": "Нет ролей",
 			"online": "В сети",
 			"idle": "Отошёл",
 			"offline": "Не в сети",
 			"dnd": "Не беспокоить"
 		},
 		"welcomeChannel": {
-			"editedChannel": "Приветственный канал был изменён на <#{{channelId}}>",
-			"installedChannel": "Приветственный канал был установлен на <#{{channelId}}>. Для отключения введите /welcomechannel disable",
-			"noChannel": "{{{warningEmoji}}} Канал ещё не установлен",
-			"deletedChannel": "Приветственный канал был удалён",
-			"selectWelcomeChannel": "Выбери канал для приветственных сообщений",
-			"setupChannel": "Установи канал для приветственных сообщений",
-			"disableChannel": "Отключи канал для приветственных сообщений",
-			"channelOption": "Установи канал для приветственных сообщений"
+			"editedChannel": "Канал для приветствия изменён на <#{{channelId}}>",
+			"installedChannel": "Канал для приветствия установлен на <#{{channelId}}>. Для отключения введите /welcomechannel disable",
+			"noChannel": "{{{warningEmoji}}} Канал для приветствия ещё не установлен",
+			"deletedChannel": "Канал для приветствия удалён",
+			"selectWelcomeChannel": "Выберите канал для приветственных сообщений",
+			"setupChannel": "Установите канал для приветственных сообщений",
+			"disableChannel": "Отключите теканал для приветственных сообщений",
+			"channelOption": "Установите канал для приветственных сообщений"
 		},
 		"leaveChannel": {
-			"editedChannel": "Прощальный канал был изменен на <#{{channelId}}>",
-			"installedChannel": "Прощальный канал был установлен на <#{{channelId}}>. Для отключения введите /leavechannel disable",
-			"noChannel": "{{{warningEmoji}}} Канал ещё не установлен",
-			"deletedChannel": "Прощальный канал был удалён",
-			"selectLeaveChannel": "Выбери канал для прощальных сообщений",
-			"setupChannel": "Установи  канал для прощальных сообщений",
-			"disableChannel": "Отключи канал для прощальных сообщений",
-			"channelOption": "Установи  канал для прощальных сообщений"
+			"editedChannel": "Канал для прощания изменен на <#{{channelId}}>",
+			"installedChannel": "Канал для прощания установлен на <#{{channelId}}>. Для отключения введите /leavechannel disable",
+			"noChannel": "{{{warningEmoji}}} Канал для прощания ещё не установлен",
+			"deletedChannel": "Канал для прощания удалён",
+			"selectLeaveChannel": "Выберите канал для прощальных сообщений",
+			"setupChannel": "Установите  канал для прощальных сообщений",
+			"disableChannel": "Отключите канал для прощальных сообщений",
+			"channelOption": "Установите  канал для прощальных сообщений"
 		},
 		"joinToCreateChannel": {
-			"editedChannel": "\"Join To Create\" channel was changed at <#{{channelId}}>",
-			"installedChannel": "\"Join To Create\" channel was set at <#{{channelId}}>. To disabled run /jointocreate disable",
-			"noChannel": "{{{warningEmoji}}} Channel has not been set yet",
-			"deletedChannel": "\"Join To Create\" channel was deleted",
-			"selectJoinToCreateChannel": "Select \"Join To Create\"",
-			"setupChannel": "Setup \"Join To Create\" channel",
-			"disableChannel": "\"Join To Create\" channel",
-			"channelOption": "Setup \"Join To Create\" channel"
+			"editedChannel": "Канал \"Join To Create\" изменён на <#{{channelId}}>",
+			"installedChannel": "Канал \"Join To Create\" установлен на <#{{channelId}}>. To disabled run /jointocreate disable",
+			"noChannel": "{{{warningEmoji}}} Канал \"Join To Create\" ещё не установлен",
+			"deletedChannel": "Канал \"Join To Create\" удалён",
+			"selectJoinToCreateChannel": "Выберите канал \"Join To Create\"",
+			"setupChannel": "Настройте канал \"Join To Create\"",
+			"disableChannel": "Отключите канал \"Join To Create\"",
+			"channelOption": "Установите канал \"Join To Create\""
 		},
 		"bugReport": {
-			"description": "Рассказать про баг",
+			"description": "Сообщить о баге",
 			"reportExists": "Вы уже отправили отчёт об ошибке"
-		},
-		"messageLeaderboard": {
-			"description": "Топ сообщений",
-			"top10Messages": "Топ 10 участников по количеству сообщений",
-			"noTop": "На сервере ещё нет топа сообщений",
-			"fieldName": "Список:"
 		}
 	},
 	"components": {
 		"modals": {
 			"bugReport": {
 				"title": "ПОИСК БАГОВ",
-				"reportSent": "Ваш репорт успешно отправлен разработчику",
+				"reportSent": "Ваш отчёт успешно отправлен разработчику",
 				"userReport": {
 					"reportFrom": "Отчёт от {{userId}}",
 					"reportDetails": {
 						"title": "Ваш отчёт об ошибке",
-						"description": "Спасибо за отправку отчёта об ошибке! Вот детали:"
+						"description": "Благодарим вас за отправку отчёта об ошибке! Вот детали:"
 					},
 					"userId": "ID пользователя",
 					"reportId": "ID отчёта",
@@ -110,8 +114,8 @@
 					"reportDescription": "Описание"
 				},
 				"reportTitleInput": {
-					"label": "Причина отправления репорта",
-					"placeholder": "Введите найденную ошибку"
+					"label": "Причина отправки отчёта",
+					"placeholder": "Введите описание найденной ошибки"
 				},
 				"reportDescriptionInput": {
 					"label": "Подробное описание проблемы",
@@ -120,14 +124,14 @@
 			},
 			"setNameTempChannel": {
 				"title": "Изменить имя канала",
-				"label": "Ввести имя канала",
+				"label": "Введите новое имя канала",
 				"succesUpdateName": "Имя канала успешно изменено",
-				"nameRoomExample": "Общение"
+				"nameRoomExample": "Пример: Общение"
 			},
 			"setLimitTempChannel": {
 				"title": "Изменить лимит пользователей",
-				"label": "Ввести лимит канала",
-				"errorLimit": "Пожалуйста введите цифру от 1 до 99",
+				"label": "Введите лимит канала",
+				"errorLimit": "Пожалуйста, введите цифру от 1 до 99",
 				"succesLimit": "Лимит успешно обновлён",
 				"limitRoomExample": "0 для безлимита"
 			}
@@ -135,7 +139,7 @@
 		"menus": {
 			"tempChannel": {
 				"changeSettings": "Изменить настройки канала",
-				"notCreate": "Ты не можешь управлять каналом!",
+				"notCreate": "Вы не можете управлять этим каналом!",
 				"name": {
 					"label": "Имя",
 					"description": "Изменение имени канала"
@@ -168,15 +172,8 @@
 	"events": {
 		"developerOnly": "Эта команда доступна только разработчику",
 		"joinToCreate": {
-			"channelName": "🔉| {{username}} канал",
+			"channelName": "🔉| Канал {{username}}",
 			"tempVoiceChannelTitle": "Временный голосовой канал"
-		},
-		"time": {
-			"moment": {
-				"momentLocale": "ru",
-				"momentWeekList": "Воскресенье_Понедельник_Вторник_Среда_Четверг_Пятница_Суббота"
-			},
-			"defaultTimeFormat": "dddd, DD.MM.YYYY"
 		},
 		"logs": {
 			"errors": {
@@ -196,7 +193,7 @@
 				"serverRules": {
 					"politeEmbed": {
 						"title": "Будьте вежливы и уважительны",
-						"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку недопустимы."
+						"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку не допускаются."
 					},
 					"noSpamEmbed": {
 						"title": "Никакого спама или рекламы",
