--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -67,10 +67,10 @@
 			"installedChannel": "Канал для приветствия установлен на <#{{channelId}}>. Для отключения введите /welcomechannel disable",
 			"noChannel": "{{{warningEmoji}}} Канал для приветствия ещё не установлен",
 			"deletedChannel": "Канал для приветствия удалён",
-			"selectWelcomeChannel": "Выберите канал для приветственных сообщений",
-			"setupChannel": "Установите канал для приветственных сообщений",
-			"disableChannel": "Отключите теканал для приветственных сообщений",
-			"channelOption": "Установите канал для приветственных сообщений"
+			"selectWelcomeChannel": "Выберать канал для приветственных сообщений",
+			"setupChannel": "Установить канал для приветственных сообщений",
+			"disableChannel": "Отключить теканал для приветственных сообщений",
+			"channelOption": "Установить канал для приветственных сообщений"
 		},
 		"leaveChannel": {
 			"editedChannel": "Канал для прощания изменен на <#{{channelId}}>",
@@ -78,9 +78,9 @@
 			"noChannel": "{{{warningEmoji}}} Канал для прощания ещё не установлен",
 			"deletedChannel": "Канал для прощания удалён",
 			"selectLeaveChannel": "Выберите канал для прощальных сообщений",
-			"setupChannel": "Установите  канал для прощальных сообщений",
-			"disableChannel": "Отключите канал для прощальных сообщений",
-			"channelOption": "Установите  канал для прощальных сообщений"
+			"setupChannel": "Установить  канал для прощальных сообщений",
+			"disableChannel": "Отключить канал для прощальных сообщений",
+			"channelOption": "Установить канал для прощальных сообщений"
 		},
 		"joinToCreateChannel": {
 			"editedChannel": "Канал \"Join To Create\" изменён на <#{{channelId}}>",
@@ -88,9 +88,9 @@
 			"noChannel": "{{{warningEmoji}}} Канал \"Join To Create\" ещё не установлен",
 			"deletedChannel": "Канал \"Join To Create\" удалён",
 			"selectJoinToCreateChannel": "Выберите канал \"Join To Create\"",
-			"setupChannel": "Настройте канал \"Join To Create\"",
-			"disableChannel": "Отключите канал \"Join To Create\"",
-			"channelOption": "Установите канал \"Join To Create\""
+			"setupChannel": "Настроить канал \"Join To Create\"",
+			"disableChannel": "Отключить канал \"Join To Create\"",
+			"channelOption": "Установить канал \"Join To Create\""
 		},
 		"bugReport": {
 			"description": "Сообщить о баге",
@@ -179,48 +179,47 @@
 			"errors": {
 				"errorCallCommand": "There was an error while executing this command! If this error continues, please contact us!"
 			}
-		},
-
-		"myServer": {
-			"embeds": {
-				"infoAboutServer": {
-					"title": "Добро пожаловать на наш сервер",
-					"description": "Здесь вы сможете не только отдохнуть и обсудить все насущные темы, но также пригласить друзей и поддержать создателя нашего бота, посмотрев его трансляции на Twitch.",
-					"fields": {
-						"links": "- [Присоединиться к серверу Discord](https://discord.gg/woiolife)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
-					}
-				},
-				"serverRules": {
-					"politeEmbed": {
-						"title": "Будьте вежливы и уважительны",
-						"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку не допускаются."
-					},
-					"noSpamEmbed": {
-						"title": "Никакого спама или рекламы",
-						"description": "Никакой рекламы (приглашения на сервер, ссылки на другие сайты и т.д.) без разрешения администраторов сервера."
-					},
-					"personalDataEmbed": {
-						"title": "Личные данные",
-						"description": "Никакого слива личных данных  одного пользователя другим пользователем. Если не было получено согласие."
-					},
-					"adultContentEmbed": {
-						"title": "18+ контент",
-						"description": "Для 18+ контента у нас на сервере имеется отдельный чат, где вы можете обсуждать темы непристойного характера без всяких ограничений: <#1031739471571451965>."
-					},
-					"streamingBehaviorEmbed": {
-						"title": "Поведение на стриме",
-						"description": "Никаких запрещённых слов, за которые стример может отлететь в бан. Это правило касается любого стрима, который проходит в настоящее время."
-					},
-					"reportToUsEmbed": {
-						"title": "Сообщите нам",
-						"description": "Если вы видите, что против вас ведутся действия, заставляющие чувствовать вас некомфортно, сообщите об этом персоналу сервера."
-					}
+		}
+	},
+	"myServer": {
+		"embeds": {
+			"infoAboutServer": {
+				"title": "Добро пожаловать на наш сервер",
+				"description": "Здесь вы сможете не только отдохнуть и обсудить все насущные темы, но также пригласить друзей и поддержать создателя нашего бота, посмотрев его трансляции на Twitch.",
+				"fields": {
+					"links": "- [Присоединиться к серверу Discord](https://discord.gg/woiolife)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
 				}
 			},
-			"buttons": {
-				"serverRules": {
-					"label": "Правила"
+			"serverRules": {
+				"politeEmbed": {
+					"title": "Будьте вежливы и уважительны",
+					"description": "Относитесь ко всем с уважением. Никакие домогательства, угрозы, оскорбления по расовому, национальному или сексуальному признаку не допускаются."
+				},
+				"noSpamEmbed": {
+					"title": "Никакого спама или рекламы",
+					"description": "Никакой рекламы (приглашения на сервер, ссылки на другие сайты и т.д.) без разрешения администраторов сервера."
+				},
+				"personalDataEmbed": {
+					"title": "Личные данные",
+					"description": "Никакого слива личных данных  одного пользователя другим пользователем. Если не было получено согласие."
+				},
+				"adultContentEmbed": {
+					"title": "18+ контент",
+					"description": "Для 18+ контента у нас на сервере имеется отдельный чат, где вы можете обсуждать темы непристойного характера без всяких ограничений: <#1031739471571451965>."
+				},
+				"streamingBehaviorEmbed": {
+					"title": "Поведение на стриме",
+					"description": "Никаких запрещённых слов, за которые стример может отлететь в бан. Это правило касается любого стрима, который проходит в настоящее время."
+				},
+				"reportToUsEmbed": {
+					"title": "Сообщите нам",
+					"description": "Если вы видите, что против вас ведутся действия, заставляющие чувствовать вас некомфортно, сообщите об этом персоналу сервера."
 				}
+			}
+		},
+		"buttons": {
+			"serverRules": {
+				"label": "Правила"
 			}
 		}
 	}
