--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -142,11 +142,11 @@
 				"notCreate": "Вы не можете управлять этим каналом!",
 				"name": {
 					"label": "Имя",
-					"description": "Изменение имени канала"
+					"description": "Изменить имя канала"
 				},
 				"limit": {
 					"label": "Лимит",
-					"description": "Изменени лимита канала"
+					"description": "Изменить лимит канала"
 				},
 				"lockChannel": {
 					"label": "Заблокировать",
