--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -139,7 +139,7 @@
 		"menus": {
 			"tempChannel": {
 				"changeSettings": "Изменить настройки канала",
-				"notCreate": "Вы не можете управлять этим каналом!",
+				"noCreate": "Вы не можете управлять этим каналом!",
 				"name": {
 					"label": "Имя",
 					"description": "Изменить имя канала"
