--- a/config/languages/uk.json
+++ b/config/languages/uk.json
@@ -139,7 +139,7 @@
 		"menus": {
 			"tempChannel": {
 				"changeSettings": "Змінити налаштування каналу",
-				"notCreate": "Ви не можете керувати цим каналом!",
+				"noCreate": "Ви не можете керувати цим каналом!",
 				"name": {
 					"label": "Ім'я",
 					"description": "Зміна імені каналу"
